tests/compile-fail/references_in_nested_struct.rs
// error-pattern: expected lifetime parameter

struct S<'a> {
    r: &'a i32
}

struct T {
    s: S  // not adequate
}
